[gd_scene load_steps=3 format=2]

[ext_resource path="res://SpriteSheets/BabyTown2BoomerDoomer.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Bullets/BoomOfDoom.gd" type="Script" id=2]

[node name="BoomOfDoom" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="Sprite"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/Area2D"]
polygon = PoolVector2Array( 11.5, -0.5, 6, -3, 3, -3, 3, 2, 6, 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SmokeTrail" type="CPUParticles2D" parent="Sprite"]
position = Vector2( -10, -0.5 )
amount = 50
lifetime = 0.2
local_coords = false
gravity = Vector2( 0, 0 )
angular_velocity = 360.0
angular_velocity_random = 1.0
scale_amount = 4.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_lock_": true
}

[node name="DeLagger" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DeLagger" to="." method="_on_DeLagger_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
